Add: list all seat on html page and add some css design

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Bardi - Cinema</title>
     <link rel="stylesheet" href="./styles.css" />
+    <script src="./script.js" defer></script>
 </head>
 <body>
 
@@ -11,7 +12,19 @@
     <h4>Take a seat</h4>
 
     <div class="seats-container">
-        <div class="seat"></div>
+
+    </div>
+
+    <div class="description">
+        <div class="sign-div">
+            <div class="free-sign"></div><span>Szabad székek</span>
+        </div>
+        <div class="sign-div">
+            <div class="sold-sign"></div><span>Foglalt székek</span>
+        </div>
+        <div class="sign-div">
+            <div class="reserved-sign"></div><span>Választott ülőhelyek</span>
+        </div>
     </div>
 
 </body>
