Add: ajax call, change website when database is changed

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div class="free-sign"></div><span>Szabad székek</span>
         </div>
         <div class="sign-div">
-            <div class="sold-sign"></div><span>Foglalt székek</span>
+            <div class="sold-sign"></div><span>Elkelt székek</span>
         </div>
         <div class="sign-div">
-            <div class="reserved-sign"></div><span>Választott ülőhelyek</span>
+            <div class="reserved-sign"></div><span>Foglalt ülőhelyek</span>
         </div>
     </div>
 
