Add: frontend http server, change reserved seat to free if past 2min

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>Cinema</h1>
     <h4>Take a seat</h4>
 
+    <p class="error-message"></p>
+
     <div class="seats-container">
 
     </div>
