Add: background logic, ajax, form submit

--- a/index.html
+++ b/index.html
@@ -29,5 +29,22 @@
         </div>
     </div>
 
+
+    <div class="reserved-div">
+
+    </div>
+
+    <form id="buySeats">
+        <label>
+            <input type="email" name="email" placeholder="E-mail" required>
+        </label>
+
+        <p>Kijelöltek megvásárlása: <button type="submit" class="submit">Megvásárol</button></p>
+    </form>
+
+
+
+
+
 </body>
 </html>
